SPRING FRAMEWORK CHANGELOG
==========================
$Id: changelog.txt,v 1.76 2004-01-12 16:57:03 johnsonr Exp $


Changes in version 1.0 RC1 (xx.01.2003)
---------------------------------------

* changed AbstractAutoProxyCreator interceptors property to interceptorNames to handle prototypes correctly
* added "xdoclet/xjavadoc.jar" to release target in the framework build script (needed for building with attributes)
* put Commons Attributes and XDoclet jars in Ant classpath instead of expecting them in Ant's lib directory
* added "ant.bat" file to framework root
* added "ant.bat" and "warfile.bat" files to "samples/jpetstore/attributes" directory
* added AfterReturning advice to complete AOP advice types
* removed PropertyValuesValidator support from BeanWrapper
* moved SortDefinition classes to new beans.support package
* moved PagedListHolder classes from util package to beans.support, to remove cyclic package dependency
* apply custom editor on Errors.getFieldValue to manually rejected field values too
* removed Servlet 2.3 "getServletContextName" call from ServletContextResource, for Servlet 2.2 compatibility
* turned AbstractWizardFormController's "getCurrentPage" method non-final, to be overridden if determined by request
* re-evaluate EL expressions on each tag rendering instead of on tag instance initialization in all Spring tags
* moved TagUtils helper class from package web.servlet.tags to web.util, renamed scope constants


Changes in version 1.0 M4 (04.01.2003)
--------------------------------------

Package org.springframework.aop
* moved auto proxy creator implementations into new org.springframework.aop.framework.autoproxy package
* introduced ProxyConfig base class for ProxyFactoryBean etc, specifying common AOP proxy settings
* introduced Before and Throws advice, in addition to interception Around advice
* replaced InvokerInterceptor and ProxyInterceptor interface by TargetSource interface
* removed "exposeInvocation" option in proxy factories